--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,7 +4,7 @@
 # https://scrapyd.readthedocs.org/en/latest/deploy.html
 
 [settings]
-default = scraper.settings
+default = config.settings.scraper
 
 [deploy]
 #url = http://localhost:6800/
